# Smart_file_org

./: .dockerignore  .env.example  .gitignore  .prettierignore  .replit  API-INTEGRATION-GUIDE.md  DEPLOYMENT-INSTRUCTIONS.md  DEPLOYMENT-TROUBLESHOOTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEVELOPER-HANDOFF.md  Dockerfile  MAKE-DEPLOYMENT-PUBLIC.md  Makefile  README.md  REST_API_GUIDE.md  TEACHER_AGENT_EXAMPLE.md  TEST_GUIDE.md  TEST_RESULTS.md  Test_Course_Materials.xlsx  WORKING-API-ENDPOINTS.md  api-test-results.md  docker-compose.yml  ecosystem.config.js  eslint.config.js  extract-pdf-text.js  jest.config.js  new-test-upload.txt  openapi.json  openapi.yaml  package-lock.json  package.json  pyproject.toml  replit.md  run-dev.js  run-tests.sh  start-dev.js  start-server.js  test-api.sh  test-cv2-ocr.py  (+15 more)
attached_assets/: Pasted--PS-C-Users-willi-curl-https-smart-file-organiser-replit-app-api-folders-StatusCode--1755160219825_1755160219825.txt  Pasted--typescript-eslint-no-explicit-any-354-48-warning-Unexpected-any-Specify-a-different-type-typ-1756739057266_1756739057266.txt  Pasted--usr-bin-docker-buildx-build-cache-from-type-gha-cache-to-type-gha-mode-max-iidfile-home-runn-1756720585759_1756720585760.txt  Pasted--workspace-make-lint-Running-linter-npx-eslint-client-server-shared-ext-ts-tsx-max-warni-1756738534380_1756738534380.txt  Pasted--workspace-npx-jest-config-jest-config-js-PASS-test-backend-simple-test-ts-13-s-FAIL-test-b-1755664630364_1755664630364.txt  Pasted-e-run-tests-sh-Smart-File-Organizer-Test-Suite--1755658947715_1755658947715.txt  (+20 more)
(+78 files in other folders)
