[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]
